test/spec_vectors/simd_splat/fail/module_12.wat
(module (func (result v128) f32x4.splat (i64.const 4)))